# tutompy

./: .flake8  .pre-commit-config.yaml  README.md  mypy.ini  noxfile.py  noxfile.py~  pyproject.toml  pyproject.toml~
.github/workflows/: coverage.yml  release.yml  test_pypi.yml  tests.yml
docs/: conf.py  index.rst  reference.rst  requirements.txt
src/tutompy/: console.py  console.py~  wikipedia.py  wikipedia.py~
tests/: conftest.py  conftest.py~  test_console.py  test_console.py~  test_wikipedia.py  test_wikipedia.py~
