[tool.poetry]
name = "tutompy"
version = "0.1.0"
description = "The tutompy Python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pamlinux/tutompy"
repository = "https://github.com/pamlinux/tutompy"
keywords = ["tutompy"]
authors = ["Pierre-Alain Moret <moret.pierre.alain@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"
requests = "^2.25.1"

[tool.poetry.scripts]
tutompy = "tutompy.console:main"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
coverage = "^5.5"
pytest-cov = "^2.11.1"
toml = "^0.10.2"
pytest-mock = "^3.5.1"
black = "^21.4b0"
flake8 = "^3.9.1"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^21.4.3"
flake8-import-order = "^0.18.1"
safety = "^1.10.3"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["tutompy"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
