[tool.poetry]
name = "tutompy"
version = "0.1.0"
description = "The hypermodern Python project"
authors = ["Pierre-Alain Moret <moret.pierre.alain@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pamlinux/tutompy"
repository = "https://github.com/pamlinux/tutompy"
keywords = ["hypermodern"]

[tool.poetry.scripts]
tutompy = "tutompy.console:main"

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
