[tool.poetry]
name = "tutompy"
version = "0.1.0"
description = "The hypermodern Python project"
authors = ["Pierre-Alain Moret <moret.pierre.alain@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pamlinux/tutompy"
repository = "https://github.com/pamlinux/tutompy"
keywords = ["hypermodern"]

[tool.poetry.scripts]
tutompy = "tutompy.console:main"

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
coverage = {extras = ["toml"], version = "^5.5"}
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["tutompy"]

[tool.coverage.report]
show_missing = true
